# Jelly

./: .gitmodules  CMakeLists.txt  README.md
CMake/: JellyConfig.cmake.in  WarningSwitch.cmake
Common/: CMakeLists.txt
Common/Core/: CMakeLists.txt
Common/Core/include/: Logger.h  Object.h
Common/Core/src/: Logger.cpp  Object.cpp
Common/Data/: CMakeLists.txt
Common/Data/include/: DataArray.h  DataArrayTemplate.h  DataSet.h  DoubleData.h  FloatData.h
Common/Data/src/: DataArray.cpp  DataSet.cpp
Common/include/: GlobalExport.h  Logger.h
Common/src/: Logger.cpp
Examples/: CMakeLists.txt
Examples/Actor/: CMakeLists.txt  main.cpp
Examples/Actors/: CMakeLists.txt  main.cpp
Examples/InteractorStyle/: CMakeLists.txt  main.cpp
Examples/QTProject/: CMakeLists.txt  MyWindow.cpp  MyWindow.h  main.cpp
Examples/Renderers/: CMakeLists.txt  main.cpp
Examples/Texture/: CMakeLists.txt  main.cpp
Examples/Window/: CMakeLists.txt  main.cpp
Examples/WindowQT/: CMakeLists.txt  main.cpp
Examples/window/: CMakeLists.txt  main.cpp
Rendering/: CMakeLists.txt
Rendering/Core/: CMakeLists.txt
Rendering/Core/include/: Actor.h  Actor3D.h  BufferData.h  Camera.h  DataSetMapper.h  DefaultRenderPass.h  DepthImageData.h  Device.h  Drawable.h  ImageData.h  Interactor.h  Mapper.h  MapperPolyData.h  MemoryHelper.h  MsaaRenderPass.h  PickRenderPass.h  Picker.h  Pipeline.h  PipelineCache.h  RenderPass.h  Renderer.h  SwapChainData.h  Texture.h  Viewer.h  VkDataBase.h  Window.h
Rendering/Core/src/: Actor.cpp  Actor3D.cpp  BufferData.cpp  Camera.cpp  DataSetMapper.cpp  DefaultRenderPass.cpp  DepthImageData.cpp  Device.cpp  Drawable.cpp  ImageData.cpp  Interactor.cpp  Mapper.cpp  MapperPolyData.cpp  MemoryHelper.cpp  MsaaRenderPass.cpp  PickRenderPass.cpp  Picker.cpp  Pipeline.cpp  PipelineCache.cpp  RenderPass.cpp  Renderer.cpp  SwapChainData.cpp  Texture.cpp  Viewer.cpp  Window.cpp
Rendering/Interaction/: CMakeLists.txt
Rendering/Interaction/include/: Interactor.h  InteractorStyle.h  InteractorStyleTrackballCamera.h
Rendering/Interaction/src/: Interactor.cpp  InteractorStyle.cpp  InteractorStyleTrackballCamera.cpp
Rendering/Platform/: CMakeLists.txt
Rendering/Platform/include/: GLFWHelper.h  InteractorGLFW.h  InteractorQT.h  WindowGLFW.h  WindowQT.h
Rendering/Platform/src/: GLFWHelper.cpp  InteractorGLFW.cpp  InteractorQT.cpp  WindowGLFW.cpp  WindowQT.cpp
Rendering/Shader/: CMakeLists.txt
Rendering/Shader/include/: ShaderCreater.h  ShaderGenerator.h  ShaderHelper.h  SpvCreater.h
Rendering/Shader/src/: ShaderCreater.cpp  ShaderGenerator.cpp  ShaderHelper.cpp  SpvCreater.cpp
Rendering/UI/: CMakeLists.txt
Rendering/UI/include/: Interactor.h  Renderer.h  SwapChainData.h  Window.h
Rendering/UI/src/: Interactor.cpp  Renderer.cpp  SwapChainData.cpp  Window.cpp
Testing/: CMakeLists.txt  Environment.hpp  main.cpp
Testing/Common/: TestLogger.cpp
Testing/Common/Core/: Logger.cpp
Testing/Common/Data/: DoubleData.cpp  FloatData.cpp
Testing/Rendering/Core/: DataSetMapper.cpp  Renderer.cpp
Testing/Rendering/Shader/: ShaderCreater.cpp  ShaderGenerator.cpp  ShaderHelper.cpp  SpvCreater.cpp
Testing/TestData/: base.vert  frag.spv  vert.spv
